      * Optional custom column count and widths. [JC]
      * Ability to add your own CSS files. [JC]
      * Custom output paths. [JC]
      * Support for multiple projects. [JC]
      * Semantic class naming from CSS rules. [JC]
    * Compressed version of ie.css. [OB]
    * Alternating table row colors. [OB]
    * Added class .showgrid to see the grid of any column or container. [OB]
  
  Bug fixes:
    * Sidebar alignment in tests/sample.html. [OB]
    * Line-height on sub/sup. [OB]
    * Clearfix not properly applied to container. [OB]
    * Misc validation errors in tests. [OB]
    * Proper margin on address. [OB]
    * Unwanted bottom margin on nested lists. [OB]
    * Form labels with unwanted fancy-type indentation. [OB]
    * Proper margin on all form elements. [OB]
    * No margins for images in headings. [OB]
    * Push-x bottom margin. [OB]
    * Vertical align set to middle on tables. [OB]
    * Improved .notice, .error and .success color contrast. [OB]
  
  Misc:
    * Increased default font size to 80% (13px). [OB]
    * Improved structure in print.css. [OB]
    * Dual-licensed under MIT and GPL licenses. [OB]
    * Changed name of .clear to .clearfix, and added .clear (clear:both;). [OB]


Version 0.6 - 21/9/2007
--
  * Created a new plugin, "iepngfix", that adds support for PNG transparency in IE5.5+ [OB]
  * Added an IE stylesheet, updated the test files and the readme accordingly [OB]
  * Re-added improved support for em units [OB]
  * Lots of minor changes to typography.css and reset.css, provided by Christian Montoya [OB]
  * Extracted the fancy typography section in typography.css to a new plugin [OB]
  * Extracted the support for CSS buttons into a new plugin. [OB]
  * Added new plugin structure. [OB]
  * Changed some default fonts so that BP works better with ClearType in XP [OB]
  * Re-added the hack for clearing floats without extra markup. [OB]
  * Added Changelog.txt to track changes in each release. [GR]